# regex-soup-bot

./: .dockerignore  Cargo.toml  LICENSE  license_template  rust-toolchain.toml  rustfmt.toml  rustfmt_for_actions.toml
.github/workflows/: catch_and_flow.yml  release.yml  release_docker_images.yml
docker/: Dockerfile  copy-platform-artifact.sh  regexsoup.sh
src/: bot.rs  command_ext.rs  commands.rs  concepts.rs  errors.rs  lib.rs  main.rs  nfa.rs  notification.rs  parser.rs  regex.rs  response.rs
src/nfa/: nfa_manipulations.rs
src/regex/: generate_quiz.rs  regex_tree.rs
src/response/: component.rs  structure.rs
