[package]
name = "regexsoup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
thiserror = "1.0.25"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
toml = "0.5.8"
itertools = "0.10.0"
once_cell = "1.7.2"
boolinator = "2.4.0"
indexmap = "1.6.2"
counted-array = "0.1.2"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
regex = "1.5.4"
combine = "4.6.1"
strum = "0.21.0"
strum_macros = "0.21.1"
rand_distr = "0.4.1"
rand = "0.8.4"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
