[package]
name = "regexsoup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
thiserror = "1.0.29"
serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"
itertools = "0.10.1"
once_cell = "1.8.0"
boolinator = "2.4.0"
indexmap = "1.7.0"
counted-array = "0.1.2"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
regex = "1.5.4"
combine = "4.6.1"
rustomaton = { git = "https://github.com/kory33/rustomaton", rev = "642647b" }
strum = "0.21.0"
strum_macros = "0.21.1"
rand_distr = "0.4.1"
rand = "0.8.4"
indoc = "1.0.3"
serde_json = "1.0.68"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
